--- a/docs/stat563/bib_math_stat.bib
+++ b/docs/stat563/bib_math_stat.bib
@@ -52,6 +52,16 @@
   year={}
 }
 
+@article{Bern,
+  title={Bernoulli distribution (p)},
+  author={Bern},
+  journal={Distribution},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
 @article{Bino,
   title={Binomial distribution (n,p)},
   author={Bino},
@@ -72,6 +82,47 @@
   year={3203}
 }
 
+@article{SNorm,
+  title={Standard Normal distribution},
+  author={SNorm},
+  journal={Distribution},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
+@article{Norm,
+  title={Normal distribution},
+  author={Norm},
+  journal={Distribution},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
+
+@article{Gamma,
+  title={Gammal distribution},
+  author={Gamma},
+  journal={Distribution},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
+@article{Beta,
+  title={Beta distribution},
+  author={Beta},
+  journal={Distribution},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
 @article{Expo,
   title={Exponential distribution $\lambda$},
   author={Expo},
@@ -81,6 +132,7 @@
   pages={90},
   year={3301}
 }
+
 
 @article{Laplace,
   title={Laplace distribution},
@@ -102,6 +154,45 @@
   year={}
 }
 
+@article{MGF,
+  title={moment generating function},
+  author={MGF},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
+@article{joint,
+  title={joint pdf},
+  author={joint},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
+@article{marg,
+  title={marginal pdf},
+  author={marg},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
+@article{HypoT,
+  title={Hypothesis Test},
+  author={HypoT},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
 
 @article{power,
   title={power function },
@@ -123,9 +214,39 @@
   year={}
 }
 
+@article{MLE,
+  title={Maximum Likelihood Estimators},
+  author={MLE},
+  journal={Definition},
+  volume={7.2},
+  number={2},
+  pages={315},
+  year={}
+}
+
 @article{BayesE,
   title={Bayes estimator},
   author={BayesE},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
+@article{FishI,
+  title={Fisher information},
+  author={FishI},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
+@article{CI,
+  title={confidence interval},
+  author={CI},
   journal={Definition},
   volume={},
   number={},
@@ -143,6 +264,16 @@
   year={}
 }
 
+@article{suff,
+  title={sufficient statistic},
+  author={suff},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
 @article{Basu,
   title={Basu's theorem},
   author={Basu},
@@ -151,6 +282,16 @@
   number={4},
   pages={262},
   year={6224}
+}
+
+@article{MVUE,
+  title={Minimum Variance Unbiased Estimator},
+  author={MVUE},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
 }
 
 @article{UMVUE,
@@ -181,4 +322,15 @@
   number={2},
   pages={391},
   year={8316}
+}
+
+
+@article{LimD,
+  title={limiting distribution},
+  author={LimD},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
 }
