--- a/static/stat563/qe_math_stat.Rmd
+++ b/static/stat563/qe_math_stat.Rmd
@@ -41,8 +41,33 @@ $f(x)=\begin{cases}10e^{-10x}& x>0\\0& o.w.\end{cases}$
 
 Find the p.d.f. of $X=Y_1-Y_2$.
 
+### 2007F3A
+[2015S1Ab][] [2008S2A][] [2016S5][] [2016F8][] [2018FA1][] [2019SA1 ][] [@joint] [@marg]
+
+Suppose $Y_1$ and $Y_2$ have the joint pdf
+$f(y_1,y_2)=\begin{cases}2&0\le y1\le y2\le 1\\0& o.w.\end{cases}$
+
+(a) Find the marginal density functions of $Y_1$ and $Y_2$ and check whether they are independent.
+
+(b) Find $E[Y_1+Y_2]$
+
+(c) Find $P(Y_1\le3/4|Y_2>1/3)$
+
+### 2007F5A
+[2013FB2][] [2014F1B][] [2015S1B][] [@CDF] [@MLE]
+
+Let $X_1,X_2,..,X_n$ be a random sample from a distribution with cumulative distribution function
+
+$F(x)=\begin{cases}0&x<0\\(\frac{x}\theta)^2& 0\le x<\theta\\1& x\ge\theta\end{cases}$
+
+(a) Find $\hat\theta$, the mle of $\theta$.
+
+(b) Find $E[\hat\theta]$.
+
+(c) Prove that $\hat\theta$ is consistent for $\theta$.
+
 ### 2007F4B
-[2015S3B][] [2018S1B][] [2019SB2][] [@Laplace]
+[2015S3B][] [2018S1B][] [2019SB2][] [@Laplace] [@MLE]
 
 Let $X_1,X_2,..,X_9$ be a random sample of size 9 from a distribution with pdf
 $f(x,\theta) =\frac12e^{-|x-\theta|}, -\infty<x<\infty$;
@@ -54,6 +79,7 @@ Find the m.l.e. of $\theta$ and find its bias.
 ## 2008S
 
 ### 2008S2A
+[2015S1Ab][] [2007F3A][] [2016S5][] [2016F8][] [2018FA1][] [2019SA1 ][] [@joint] [@marg]
 
 Let $(Y_1,Y_2)$ have the joint pdf
 $f(y_1,y_2)=\begin{cases}c(1-y_2)&0\le y1\le y2\le 1\\0& o.w.\end{cases}$
@@ -86,19 +112,115 @@ $f(y_1,y_2)=\begin{cases}c(1-y_2)&0\le y1\le y2\le 1\\0& o.w.\end{cases}$
 
 ## 2013F
 
+
+
+
 ## 2014S
 
 Crain, Kochar
 
+### 2014S1A
 
 ## 2014F
+
+### 2014F1A
+[@Bern] [@MGF]
+
+Repeat a sequence of i.i.d. Bernoulli trials until you observe the frst success, where p = the probability of a success and $q=1-p=$ the probability of a failure on any one trial. Let the random variable Y count the number of failures before the frst success.
+
+(a) State the name of this statistical experiment.
+
+(b) Provide a mathematical formula for the probability mass function, $P(Y=y)$ where $y=$?.
+
+(c) Give in closed form the $P(Y\ge y)$.
+
+(d) Determine the $E(Y)$.
+
+(e) Derive the moment generating function (M.G.F.) of Y . Remember to state the interval over which this M.G.F. exists.
+
+### 2014F2A
+
+One percent of all individuals in a certain population are carriers of a particular disease. A diagnostic test for this disease has a 90% detection rate for carriers and a 5% detection rates for noncarriers. Suppose the test is applied independently to two different blood samples from the same randomly selected individual.
+
+(a) What is the probability that both tests yield the same result?
+
+(b) If both tests are positive, what is the probability that the selected individual is a carrier?
+
+
+### 2014F1B
+[2007F5A][] [2013FB2][] [2015S1B][] [@CDF] [@MLE] [@CI]
+
+Let $X_1,X_2,..,X_n$ be a random sample from a distribution with cumulative distribution function
+
+$F(x)=\begin{cases}0&x<0\\(\frac{x}\theta)^2& 0\le x<\theta\\1& x\ge\theta\end{cases}$
+
+(a) Find the MLE $\hat\theta$ of $\theta$.
+
+(b) Prove that $\hat\theta$ is consistent for $\theta$.
+
+(c) Find a 95% confidence interval for $\theta$ when $n=6$.
+
+### 2014F2B
+[@Pois] [@FishI]
+
+Let $X_1,X_2,..,X_{n}$ denote a random sample from a Poisson distribution with mean $\theta,\theta>0$.
+
+(a) Find the Fisher information about $\theta$ in the sample.
+
+(b) Suppose we want to estimate $m(\theta)=P(X_1=0)=e^{-\theta}$. Find a lower bound on the variance of any unbiased estimator of the parametric function $m(\theta)$.
+
+### 2014F3B
+[@UMP] [@HypoT] [@power]
+
+Let $\theta$ be a parameter with space $\Omega=\{0; 1\}$. Let $X$ be a discrete random variable taking on values 1,2,3,or 4. Let the probability funtion of $X$ be given by the following table:
+
+ ----------------------------------
+            $X_1$ $X_2$ $X_3$ $X_4$
+ ---------- ----- ----- ----- ----- 
+ $\theta_0$ $1/2$ $1/4$ $1/8$ $1/8$
+ 
+ $\theta_1$ $2/9$ $2/9$ $2/9$ $1/3$
+ ----------------------------------
+
+Find the UMP size 1/8 and 1/4 tests to test $H_0:\theta=0$ against $H_A:\theta=1$. Also find the powers of these two tests.
+
+### 2014F4B
+[@Norm] [@MLE]
+
+Let $X_1,X_2,..,X_{n}$ be a random sample from a normal distribution, $N(\mu,\sigma^2)$, where $-\infty<\mu<+\infty$ and $\sigma>0$. Find the MLE of $\mu/\sigma$ and find itsexpected value.
+
+### 2014F5B
+[2017FB2][] [@Expo] [@suff]
+
+Let $X_1,X_2,..,X_{n}$ denote a random sample from exponential distribution
+with pdf,
+$f(x,\mu)=\begin{cases}e^{-(x-\mu)}& \mu<x<\infty\\0& e.w.\end{cases}$
+
+(a) Show that $X_{(1)}=\min\{X_i\}$ is a complete sufficient statistic.
+
+(b) Are $X_{(1)}$ and the sample variance independent statistics? Justify your answer.
 
 ## 2015S
 
 Tableman, Kochar
 
+### 2015S1Aa
 
+Let X be a random variable with finite mean $\mu$, finite variance $\sigma^2$,
+and assume $E(X^8)<\infty$. Prove or disprove:
 
+i. $E[(X-\mu/\sigma)^2]\ge1$.
+
+ii. $E[(X-\mu/\sigma)^4]\ge1$.
+
+### 2015S1Ab
+[2007F3A][] [2008S2A][] [2016S5][] [2016F8][] [2018FA1][] [2019SA1 ][] [@joint] [@marg]
+
+Suppose a box contains a large number of tacks, and the probability $X$ that a particular tack will land with its point up when it is tossed varies from tack to tack in accordance with the following pdf:
+
+$f(x)=\begin{cases}2(1-x)&0<x<1\\0& o.w.\end{cases}$
+
+Suppose a tack is selected at random from this box and this tack is then tossed three times independently. Determine the probability the tack will land with its point up on all three tosses.
 
 ### 2015S2A
 [2007F2A][] [2019SA2][] [@Basu] 
@@ -109,9 +231,50 @@ $f(x)=\begin{cases}10e^{-10x}& x>0\\0& o.w.\end{cases}$
 
 Find the p.d.f. of $X=Y_1-Y_2$.
 
+### 2015S3A
+[2016S3][] [@SNorm] [@mean]
+
+First,let $\Phi(.)$ and $\phi(.)$ denote the standard normal cdf and pdf respectively. Then, let $X_1,..,X_n$ denotes a random sample from a normal distribution with means $\theta$ and variance $\sigma^2$, and let $F(.)$ and $f(.)$ denote the common cdf and pdf of the r.s. respectively. Assume the sample size $n$ is odd; that is, $n=2k-1$; $k=1,2,3,..$ In this situation, the sample
+median is the $k^{th}$ order statistic, denoted by $Y_k$.
+
+(a) (5) Let $g(y)$ denote the pdf of the sample median $Y_k$. Derive $g(y)$. You may use the symbols $F(.)$ and $f(.)$.
+
+(b) (5) Determine the $E(Y_k|\bar X)$, where $\bar X$ is the sample mean of the above random sample. Justify your answer.
+
+### 2015S4A
+[@CDF]
+
+(a) Let X be a continuous type random variable with cumulative distribution function F(x). Find the distribution of the random variable
+$Y=\ln(1-F(X))$:
+
+(b) Prove that for any $y\ge c$, the function
+$G_c(y)=P[X\le y|X\ge c]$
+
+
+### 2015S5A
+[@Pois]
+
+Suppose X and Y are independent Poisson random variables with parameters $\lambda$ and $2\lambda$, respectively.
+
+(a) Find the distribution of $X+Y$.
+
+(b) Find $E[X|X+Y=5]$.
+
+### 2015S1B
+[2007F5A][] [2013FB2][] [2014F1B][] [@CDF] [@MLE]
+
+Let $X_1,X_2,..,X_n$ be a random sample from a distribution with cumulative distribution function
+
+$F(x)=\begin{cases}0&x<0\\(\frac{x}\theta)^2& 0\le x<\theta\\1& x\ge\theta\end{cases}$
+
+(a) Find $\hat\theta$, the mle of $\theta$.
+
+(b) Find $E[\hat\theta]$.
+
+(c) Prove that $\hat\theta$ is consistent for $\theta$.
 
 ### 2015S2B
-[2018S2B][]
+[2018S2B][] [@FishI]
 
 Let $X_1,X_2,..,X_n$ be a random sample from exponential distribution with p.d.f.
 
@@ -126,7 +289,7 @@ for which the parameter $\theta>0$ is unknown.
 (c) Find the Cramer-Rao lower bound @CRLB on the variance of any unbiased estimator of $g(\theta)$.
 
 ### 2015S3B
-[2007F4B][] [2018S1B][] [2019SB2][] [@Laplace]
+[2007F4B][] [2018S1B][] [2019SB2][] [@Laplace] [@MLE] [@MLE]
 
 Let $X_1,X_2,..,X_9$ be a random sample of size 9 from a distribution with pdf
 $f(x,\theta) =\frac12e^{-|x-\theta|}, -\infty<x<\infty$;
@@ -135,18 +298,115 @@ where $-\infty<\theta<\infty$ is unknown.
 
 Find the m.l.e. of $\theta$ and find its bias.
 
+### 2015S4B
+[2018S3B][] [2019SB3][] [@SPower] [@power] [@UMP]
+
+Suppose $Y$ is a random variable (sample size = 1) from a population with density function
+$f(y|\theta)=\begin{cases}\theta y^{\theta-1}& 0<x<1,\theta>0\\0& o.w.\end{cases}$
+
+(a) Sketch the power function of the test of the rejection: $Y>0.5$.
+
+(b) Based on the single observation $Y$ , find the uniformly most powerful test of size $\alpha$ for testing $H_0:\theta=1$ against $H_A :\theta>1$.
+
+### 2015S5B
+[2019SA4][] [@FishI] [@CI]
+
+Let $X_1,X_2,..,X_{5}$ denote a random sample size n = 5 from a continuous distribution with cdf $F(.)$ with median $\theta$. Let $S(\theta)=$ the number of $fX0is > \theta$. We can express this as 
+$S(\theta)=\sum_{i=1}^5I(X_i>\theta)$;
+where I(.) is an indicator variable.
+
+(a) State explicitly the distribution of $S(\theta)$.
+
+(b) Sketch the graph of $S(\theta)$ as a function of $\theta$. Then describe the graph in words.
+
+(c) Find a confidence interval for $\theta$ with confidence coefficient close to 0.95.
+
+
 ## 2015F 
 
-### 2015F
-[2018SA3][]
+### 2015F1
+[@Unif] [@suff] [@UMVUE]
 
+Let $X_1,X_2,..,X_{n}$ be iid continuous uniform r.v.'s over $[0,\theta]$, where $0 <\theta<\infty$. Let $Y_{n}=\max\{X_1,X_2,..,X_{n}\}$
+
+(a) (5 pts) Find $E[Y_n]$.
+
+(b) (5 pts) Find $Var[Y_n]$.
+
+(c) (5 pts) Show that $Y_n$ is a sufficient statistic for $\theta$.
+
+(d) (5 pts) Assuming $Y_n$ is a complete sufficient statistic for $\theta$, find the UMVUE of $\theta$.
+
+(e) (5 pts) Assuming $Y_n$ is a complete sufficient statistic for $\theta$, find the UMVUE of $\theta^2$.
+
+### 2015F2
+[@Expo]
+
+Suppose $X_1$ and $X_2$ are iid exponential with parameter = 1.
+
+(a) (5 pts) Find the pdf of $Y_1=X_1/(X_1+X_2)$.
+
+(b) (5 pts) Find the pdf of $Y_2=X_1+X_2$.
+
+(c) (5 pts) Are $Y_1$ and $Y_2$ independent?
+
+### 2015F3
+[@Unif] [@LimD]
+
+Let $X_1,X_2,..,X_{n}$ be iid $uniform[0,1]$ rv's. Let $0\le Y_1\le Y_2\le..\le Y_n\le1$ be the
+corresponding order statistics.
+
+(a) (5 pts) Find the pdf $g_k(y_k)$ of $Y_k$.
+
+(b) (5 pts) Find $E[Y_k]$.
+
+(c) (5 pts) Find $Var[Y_k]$.
+
+(d) (5 pts) What is the limiting distribution of $W_1=nY_1$?
+
+(e) (5 pts) What is the limiting distribution of $W_n=n(1-Y_n)$?
+
+### 2015F4
+[@Beta] [@HypoT]
+
+Let X1 be a random sample of size n = 1 from the Beta distribution with pdf
+$f(x|\theta)=\begin{cases}\frac{\Gamma(2\theta)}{\Gamma(\theta)\Gamma(\theta)}x^{\theta-1}(1-x)^{\theta-1}&0<x<1\\0&o.w.\end{cases}$
+
+Suppose a researcher is interested in testing $H_0:\theta= 1$ against $H_1:\theta=2$. The researcher decides to reject $H_0$ in favor of $H_1$ if $X_1<2/3$.
+
+(a) (5 pts) Find the size of the test
+
+(b) (5 pts) Compute the power of the test at $\theta=2$.
+
+### 2015F5
+[@Expo] [@LRT] [@HypoT]
+
+Let $X_1,X_2,..,X_{m}$ be a random sample from the exponential distribution with
+mean $\theta_1$ and let $Y_1,Y_2,..,Y_{n}$ be an independent random sample from another exponential distribution with mean $\theta_2$. Find the likelihood ratio test for testing $H0:\theta_1=\theta_2$ vs $H_a:\theta_1\neq\theta_2$
 
 ## 2016S
 
 Crain, Kim
 
+### 2016S1
+[@Pois] [@MVUE]
+
+Let $X_1,X_2,..,X_n$ be iid (independent, identically distributed) Poisson random variables with parameter $\lambda>0$.
+
+(a) Find a complete sufficient statistic for $\lambda$.
+
+(b) Find the MVUE (Minimum Variance Unbiased Estimator) of $\lambda$.
+
+(c) Find the MVUE of $\lambda^2$:
+
+(d) Find the MVUE of $e^{-\lambda}$.
+
+(e) Find the MVUE of $P(X_i=1)=\lambda^1e^{-\lambda}/1!$:
+
+(f) Find the MVUE of $P(X_i=k)=\lambda^ke^{-\lambda}/k!$:
+
 ### 2016S2
-[2017FB1][] @Bino
+[2017FB1][] [@Bino] [@MVUE]
 
 Let $Y$ be $Binomial(n,p)$, with $n$ known and $p$ unknown. Among functions $u(Y)$ of $Y$,
 
@@ -158,9 +418,24 @@ Let $Y$ be $Binomial(n,p)$, with $n$ known and $p$ unknown. Among functions $u(Y
 
 (d) What is the MVUE of $P(Y=k)=\binom{n}{k}p^k(1-p)^{n-k}$?
 
+
+### 2016S3
+[2015S3A][] [@SNorm] [@mean]
+
+Let $Z$ be $N(0,1)$. Let $\Phi(z)=\int_{-\infty}^z=\phi(x)dx$, where $\phi(x) = \frac1{\sqrt{2\pi}}e^{−x^2/2},-\infty<x<\infty$, where $\phi(x)$ is the standard normal pdf, and $\Phi(z)$ is the standard normal cdf.
+
+(a) Find $E[\Phi(Z)]$.
+
+(b) Find $E[\Phi^{2}(Z)]$.
+
+(c) Find $E[n\Phi^{n-1}(Z)]$.
+
+(d) Find $E[Z^4]$.
+
+(e) Find $E[Z^5]$
+
 ### 2016S4
 [2016F7][] [2017FB4][] [2018FB2][] [2019SB4][]
-
 
 Let $X_1,X_2,..,X_n$ be a random sample of size n from a probability density function
 
@@ -176,16 +451,35 @@ where $\theta>-1$ is an unknown parameter.
 
 (d) (2 pts) What is the asymptotic distribution of $\hat\theta$?
 
+### 2016S5
+[2015S1Ab][] [2007F3A][] [2008S2A][] [2016F8][] [2018FA1][] [2019SA1 ][] [@joint] [@marg]
+
+Let $X$ and $Y$ have the following joint pdf:
+$f(x,y) =\begin{cases}6(y-x)& 0<x<y<1\\0& o.w.\end{cases}$
+Define $Z=(X+Y)=2$ and $W=Y$, respectively.
+
+(a) Find the joint pdf of Z and W.
+
+(b) Find the marginal pdf of Z.
 
 ## 2016F
 
 Fountain, Ian Dinwoodie
 
 ### 2016F1
+[@Norm]
+
+Let $X_1,X_2,..,X_n$ be a random sample from a normal distribution with mean $\mu$ and variance $\sigma^2$.
+Let $S_k^2=\frac1k\sum_{i=1}^n(X_i-\bar X)^2$ be an estimator of $\sigma^2$. Find the value of $k$ that minimizes the mean squared error of the estimator.
 
 ### 2016F2
+[@MGF]
+
+The moment generating function of a particular random variable is $M_X(t)=\frac{e^t}{4-3e^t}$. Find the coefficient of variation ($CV=\sigma/\mu$) of this distribution.
 
 ### 2016F3
+
+If X is a random variable such that $E[X]=2$ and $E[X^2]=13$, determine a lower bound for the probability $P(-4<X<8)$. (Hint: Use a famous inequality.)
 
 ### 2016F4
 [@Unif] [@CDF] [@PDF]
@@ -194,7 +488,7 @@ Let $Y_1$ and $Y_2$ be a random sample of size 2 from $Uniform(0,1)$. Find the c
 
 ### 2016F5
 
-Let $Y_n$ be the $n^th$ order statistic of a random sample of size n from the normal distribution $N(\theta,\sigma^2)$. Prove that $Y_n-\bar Y$ and $\bar Y$ are independent.
+Let $Y_n$ be the $n^{th}$ order statistic of a random sample of size n from the normal distribution $N(\theta,\sigma^2)$. Prove that $Y_n-\bar Y$ and $\bar Y$ are independent.
 
 562-2
 
@@ -230,6 +524,7 @@ where $\theta>-1$ is an unknown parameter.
 
 
 ### 2016F8
+[2015S1Ab][] [2007F3A][] [2008S2A][] [2016S5][] [2018FA1][] [2019SA1 ][] [@joint] [@marg]
 
 Let $(Y_1,Y_2)$ have the joint pdf
 $f(y_1,y_2)=\begin{cases}c(1-y_2)&0\le y1\le y2\le 1\\0& o.w.\end{cases}$
@@ -339,7 +634,7 @@ Let $Y$ be $Binomial(n,p)$, with $n$ known and $p$ unknown. Among functions $u(Y
 (d) What is the MVUE of $P(Y=k)=\binom{n}{k}p^k(1-p)^{n-k}$?
 
 ### 2017FB2
-[@Expo]
+[2014F5B][] [@Expo]
 
 Let $X_1,X_2,..,X_{10}$ be a random sample from an exponential distribution with location
 parameter $\theta$ with pdf
@@ -421,7 +716,7 @@ where $-\infty<\theta<\infty$ is unknown.
 Find the m.l.e. of $\theta$ and find its bias.
 
 ### 2018S2B
-[2015S2B][]
+[2015S2B][] [@FishI]
 
 Let $X_1,X_2,..,X_n$ be a random sample from exponential distribution with p.d.f.
 
@@ -436,7 +731,7 @@ for which the parameter $\theta>0$ is unknown.
 (c) Find the Cramer-Rao lower bound @CRLB on the variance of any unbiased estimator of $g(\theta)$.
 
 ### 2018S3B
-[2019SB3][] [@SPower]
+[2015S4B][] [2019SB3][] [@SPower] [@power] [@UMP]
 
 Let $X_1,X_2,..,X_n$ be a random sample from a a distribution with pdf
 
@@ -444,7 +739,7 @@ $f(x;\theta)=\begin{cases}\theta x^{\theta-1}& 0<x<1\\0& o.w.\end{cases}$
 
 $H_0:\theta=1\quad H_1 :\theta>1$
 
-Derive the @UMP test of size $\alpha$ and obtain the null distribution of your test statistic.
+Derive the UMP test of size $\alpha$ and obtain the null distribution of your test statistic.
 
 ### 2018S4B
 
@@ -461,8 +756,7 @@ reject $T>t_0$ two-side rejection region.
 Kochar, Bruno
 
 ### 2018FA1
-
-[2016F8][]
+[2015S1Ab][] [2007F3A][] [2008S2A][] [2016S5][] [2016F8][] [2019SA1 ][] [@joint] [@marg]
 
 Suppose $(Y_1,Y_2)$ have the joint pdf
 $f(y_1,y_2)=\begin{cases}C&0\le y1\le y2\le 1\\0& o.w.\end{cases}$
@@ -548,7 +842,7 @@ Let $X_1,X_2,..,X_n$ be a random sample from $N(\mu,\sigma^2)$ distribution. Fin
 $\hat\tau=\bar x+1.645s$
 
 ### 2018FB4
-
+[@Unif] [@HypoT]
 Let $X_1$ and $X_2$ be two independent random variables each having uniform distribution
 on the interval $(\theta,\theta+1)$. For testing $H_0:\theta=0$ against $H_a:\theta> 0$, we have two competing tests :
 
@@ -568,10 +862,11 @@ find pdf of $x_1+x_2$ (example of textbook)
 Kochar, Bruno
 
 ### 2019SA1 
+[2015S1Ab][] [2007F3A][] [2008S2A][] [2016S5][] [2016F8][] [2018FA1][] [@joint] [@marg]
 
 Suppose X and Y have the joint pdf
 
-$f(x; y) =\begin{cases}Cxy& 0\le x\le 2, 0\le y\le 2, x + y\le 2\\0& o.w.\end{cases}$
+$f(x;y) =\begin{cases}Cxy& 0\le x\le 2, 0\le y\le 2, x + y\le 2\\0& o.w.\end{cases}$
 
 (a) (4 pts) Find the value of C;
 
@@ -600,6 +895,7 @@ Let $\theta$ be Beta distributed, $\theta\sim Beta(1,1)$. Let $N_1$ be Binomial 
 (b) (6 pts) Compute $p(N_1=n_1)$ for $n_1=0...n$.
 
 ### 2019SA4 
+[2015S5B][]
 
 Let $X_1,X_2,..,X_{10}$ be a random sample from a Poisson distribution with mean .
 
@@ -613,7 +909,7 @@ Let $X_1,X_2,..,X_n$ be a random sample from a normal distribution $N(\mu,\sigma
 Solve these two equations. Round up if n is not an integer. Hint: $z_{.05}=1.645$ and $z_{.1}=1.28$
 
 ### 2019SB2 
-[2007F4B][] [2015S3B][] [2018S1B][] [@Laplace]
+[2007F4B][] [2015S3B][] [2018S1B][] [@Laplace] [@MLE]
 
 Let $X_1,X_2,..,X_9$ be a random sample of size 9 from a distribution with pdf
 $f(x,\theta) =\frac12e^{-|x-\theta|}, -\infty<x<\infty$;
@@ -623,7 +919,7 @@ where $-\infty<\theta<\infty$ is unknown.
 Find the m.l.e. of $\theta$ and find its bias.
 
 ### 2019SB3 
-[2018S3B][] [@SPower]
+[2015S4B][] [2018S3B][] [@SPower] [@power] [@UMP]
 
 Suppose $X_1,X_2,..,X_n$ is a random sample from a distribution with pdf
 
@@ -633,7 +929,7 @@ Suppose that the value of  is unknown and it is desired to test the following hy
 
 $H_0:\theta=1\quad H_1 :\theta>1$
 
-Derive the @UMP test of size $\alpha$ and obtain the null distribution of your test statistic.
+Derive the UMP test of size $\alpha$ and obtain the null distribution of your test statistic.
 
 ### 2019SB4 
 [2016S4][] [2016F7][] [2017FB4][] [2018FB2][]
