--- a/docs/stat563/bib_math_stat.bib
+++ b/docs/stat563/bib_math_stat.bib
@@ -42,6 +42,36 @@
   year={2201}
 }
 
+@article{Var,
+  title={variance},
+  author={Var},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
+@article{Cor,
+  title={correlation},
+  author={Cor},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
+@article{Cov,
+  title={covariance},
+  author={Cov},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
 @article{Unif,
   title={Uniform distribution (a,b)},
   author={Unif},
@@ -133,6 +163,25 @@
   year={3301}
 }
 
+@article{t,
+  title={t distribution},
+  author={t},
+  journal={Distribution},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
+@article{Weib,
+  title={Weibull distribution},
+  author={Weib},
+  journal={Distribution},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
 
 @article{Laplace,
   title={Laplace distribution},
@@ -184,6 +233,16 @@
   year={}
 }
 
+@article{trans,
+  title={transformation},
+  author={trans},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
 @article{HypoT,
   title={Hypothesis Test},
   author={HypoT},
@@ -214,6 +273,16 @@
   year={}
 }
 
+@article{MOM,
+  title={Method of Moments},
+  author={MOM},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
 @article{MLE,
   title={Maximum Likelihood Estimators},
   author={MLE},
@@ -221,6 +290,16 @@
   volume={7.2},
   number={2},
   pages={315},
+  year={}
+}
+
+@article{MSE,
+  title={mean-squared error},
+  author={MSE},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
   year={}
 }
 
@@ -267,6 +346,26 @@
 @article{suff,
   title={sufficient statistic},
   author={suff},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
+@article{consi,
+  title={consistent},
+  author={cons},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
+@article{asym,
+  title={asymptotic},
+  author={asym},
   journal={Definition},
   volume={},
   number={},
