--- a/static/stat563/bib_math_stat.bib
+++ b/static/stat563/bib_math_stat.bib
@@ -243,6 +243,16 @@
   year={}
 }
 
+@article{Cheb,
+  title={Chebychev inequality},
+  author={Cheb},
+  journal={Theorem},
+  volume={3.6},
+  number={1},
+  pages={111},
+  year={3601}
+}
+
 @article{HypoT,
   title={Hypothesis Test},
   author={HypoT},
@@ -346,6 +356,16 @@
 @article{suff,
   title={sufficient statistic},
   author={suff},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
+@article{unbias,
+  title={unbiased estimator},
+  author={unbias},
   journal={Definition},
   volume={},
   number={},
