--- a/docs/stat563/bib_math_stat.bib
+++ b/docs/stat563/bib_math_stat.bib
@@ -363,9 +363,29 @@
   year={}
 }
 
+@article{comp,
+  title={complete},
+  author={comp},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
 @article{unbias,
   title={unbiased estimator},
   author={unbias},
+  journal={Definition},
+  volume={},
+  number={},
+  pages={},
+  year={}
+}
+
+@article{effi,
+  title={efficient},
+  author={effi},
   journal={Definition},
   volume={},
   number={},
