--- a/static/stat563/bib_math_stat.bib
+++ b/static/stat563/bib_math_stat.bib
@@ -1,485 +1,402 @@
 
 @article{sample,
-  title={sample},
-  author={sample},
-  journal={sample},
-  volume={},
+  type={sample},
   number={},
-  pages={},
-  year={},
-  publisher={},
-  URL={},
-  doi={}
+  subject={sample},
+  title={sample},
+  pages={}
 }
 
 @article{CDF,
   title={Cumulative distribution function $F_X(x)=P_X(X\le x)$},
-  author={CDF},
-  journal={Definition},
-  volume={1.5},
-  number={},
+  subject={CDF},
+  type={Definition},
   pages={26},
-  year={1501}
+  number={1501}
 }
 
 @article{PDF,
   title={probability density function},
-  author={PDF},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={PDF},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{mean,
   title={expected value $Eg(X)=\sum_{-\infty}^\infty g(x)f_X(x)dx$},
-  author={mean},
-  journal={Definition},
-  volume={2.2},
-  number={},
+  subject={mean},
+  type={Definition},
   pages={50},
-  year={2201}
+  number={2201}
 }
 
 @article{Var,
   title={variance},
-  author={Var},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={Var},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{Cor,
   title={correlation},
-  author={Cor},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={Cor},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{Cov,
   title={covariance},
-  author={Cov},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={Cov},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{Unif,
   title={Uniform distribution (a,b)},
-  author={Unif},
-  journal={Distribution},
-  volume={},
-  number={},
+  subject={Unif},
+  type={Distribution},
   pages={},
-  year={}
+  number={}
 }
 
 @article{Bern,
   title={Bernoulli distribution (p)},
-  author={Bern},
-  journal={Distribution},
-  volume={},
-  number={},
+  subject={Bern},
+  type={Distribution},
   pages={},
-  year={}
+  number={}
 }
 
 @article{Bino,
   title={Binomial distribution (n,p)},
-  author={Bino},
-  journal={Distribution},
-  volume={},
-  number={},
+  subject={Bino},
+  type={Distribution},
   pages={},
-  year={}
+  number={}
 }
 
 @article{Pois,
   title={Poisson distribution $\lambda$},
-  author={Pois},
-  journal={Distribution},
-  volume={3.2},
-  number={},
+  subject={Pois},
+  type={Distribution},
   pages={84},
-  year={3203}
+  number={3203}
 }
 
 @article{SNorm,
   title={Standard Normal distribution},
-  author={SNorm},
-  journal={Distribution},
-  volume={},
-  number={},
+  subject={SNorm},
+  type={Distribution},
   pages={},
-  year={}
+  number={}
 }
 
 @article{Norm,
   title={Normal distribution},
-  author={Norm},
-  journal={Distribution},
-  volume={},
-  number={},
+  subject={Norm},
+  type={Distribution},
   pages={},
-  year={}
+  number={}
 }
 
 
 @article{Gamma,
   title={Gammal distribution},
-  author={Gamma},
-  journal={Distribution},
-  volume={},
-  number={},
+  subject={Gamma},
+  type={Distribution},
   pages={},
-  year={}
+  number={}
 }
 
 @article{Beta,
   title={Beta distribution},
-  author={Beta},
-  journal={Distribution},
-  volume={},
-  number={},
+  subject={Beta},
+  type={Distribution},
   pages={},
-  year={}
+  number={}
 }
 
 @article{Expo,
   title={Exponential distribution $\lambda$},
-  author={Expo},
-  journal={Distribution},
-  volume={3.3},
-  number={},
+  subject={Expo},
+  type={Distribution},
   pages={90},
-  year={3301}
+  number={3301}
 }
 
 @article{t,
   title={t distribution},
-  author={t},
-  journal={Distribution},
-  volume={},
-  number={},
+  subject={t},
+  type={Distribution},
   pages={},
-  year={}
+  number={}
 }
 
 @article{Weib,
   title={Weibull distribution},
-  author={Weib},
-  journal={Distribution},
-  volume={},
-  number={},
+  subject={Weib},
+  type={Distribution},
   pages={},
-  year={}
+  number={}
 }
 
 @article{Laplace,
   title={Laplace distribution},
-  author={Laplace},
-  journal={Distribution},
-  volume={},
-  number={},
+  subject={Laplace},
+  type={Distribution},
   pages={},
-  year={}
+  number={}
 }
 
 @article{SPower,
   title={Standard Power distribution},
-  author={Power},
-  journal={Distribution},
-  volume={},
-  number={},
+  subject={Power},
+  type={Distribution},
   pages={},
-  year={}
+  number={}
+}
+
+@article{lifetime,
+  title={lifetime},
+  subject={lifetime},
+  type={Definition},
+  pages={},
+  number={}
 }
 
 @article{MGF,
   title={moment generating function},
-  author={MGF},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={MGF},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{joint,
   title={joint pdf},
-  author={joint},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={joint},
+  type={Definition},
   pages={},
-  year={}
+  number={}
+}
+
+@article{cond,
+  title={conditional pdf},
+  subject={cond},
+  type={Definition},
+  pages={},
+  number={}
 }
 
 @article{marg,
   title={marginal pdf},
-  author={marg},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={marg},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{trans,
   title={transformation},
-  author={trans},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={trans},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{Cheb,
   title={Chebychev inequality},
-  author={Cheb},
-  journal={Theorem},
-  volume={3.6},
-  number={1},
+  subject={Cheb},
+  type={Theorem},
   pages={111},
-  year={3601}
+  number={3601}
 }
 
 @article{HypoT,
   title={Hypothesis Test},
-  author={HypoT},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={HypoT},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{power,
   title={power function },
-  author={power},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={power},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{LRT,
   title={likelihood ratio test},
-  author={LRT},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={LRT},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{MOM,
   title={Method of Moments},
-  author={MOM},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={MOM},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{MLE,
   title={Maximum Likelihood Estimators},
-  author={MLE},
-  journal={Definition},
-  volume={7.2},
-  number={2},
+  subject={MLE},
+  type={Definition},
   pages={315},
-  year={}
+  number={7202}
 }
 
 @article{MSE,
   title={mean-squared error},
-  author={MSE},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={MSE},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{BayesE,
   title={Bayes estimator},
-  author={BayesE},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={BayesE},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{FishI,
   title={Fisher information},
-  author={FishI},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={FishI},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{CI,
   title={confidence interval},
-  author={CI},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={CI},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{CRLB,
   title={Cramer-Rao Lower Bound},
-  author={CRLB},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={CRLB},
+  type={Definition},
   pages={335(361)},
-  year={}
+  number={}
 }
 
 @article{suff,
   title={sufficient statistic},
-  author={suff},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={suff},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{comp,
   title={complete},
-  author={comp},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={comp},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{unbias,
   title={unbiased estimator},
-  author={unbias},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={unbias},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{effi,
   title={efficient},
-  author={effi},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={effi},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{consi,
   title={consistent},
-  author={cons},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={cons},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{asym,
   title={asymptotic},
-  author={asym},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={asym},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{indep,
   title={independent},
-  author={indep},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={indep},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{Basu,
   title={Basu's theorem},
-  author={Basu},
-  journal={Theorem},
-  volume={6.2},
-  number={4},
+  subject={Basu},
+  type={Theorem},
   pages={262},
-  year={6224}
+  number={6224}
 }
 
 @article{MVUE,
   title={Minimum Variance Unbiased Estimator},
-  author={MVUE},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={MVUE},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
 
 @article{UMVUE,
   title={uniform minimum variance unbiased estimator},
-  author={UMVUE},
-  journal={Definition},
-  volume={7.3},
-  number={2},
+  subject={UMVUE},
+  type={Definition},
   pages={304--305},
-  year={7307}
+  number={7307}
 }
 
 @article{UMP,
   title={uniformly most powerful},
-  author={UMP},
-  journal={Definition},
-  volume={8.3},
-  number={2},
+  subject={UMP},
+  type={Definition},
   pages={388},
-  year={8311}
+  number={8311}
 }
 
 @article{MLR,
   title={monotone likelihood ratio},
-  author={MLR},
-  journal={Definition},
-  volume={8.3},
-  number={2},
+  subject={MLR},
+  type={Definition},
   pages={391},
-  year={8316}
+  number={8316}
 }
 
 
 @article{LimD,
   title={limiting distribution},
-  author={LimD},
-  journal={Definition},
-  volume={},
-  number={},
+  subject={LimD},
+  type={Definition},
   pages={},
-  year={}
+  number={}
 }
