--- a/static/stat563/qe_math_stat.Rmd
+++ b/static/stat563/qe_math_stat.Rmd
@@ -10,7 +10,7 @@ output:
       smooth_scroll: true
 
 bibliography: bib_math_stat.bib
-csl: index-for-stat.csl
+
 ---
 
 
@@ -2235,13 +2235,13 @@ $f_T(t)=\frac1{1.5}e^{-\frac1{1.5}t}, t>0$
 
 ### 2018S2A
 [@trans]
-[Example 2.1.7]
+[Ex 2.7]
 
 Let $X$ have pdf 
 $fX(x)=\frac29(x+1), -1\le x\le2$ 
 Find the pdf of $Y=X^2$.
 
-$\begin{cases}&1\le y\le4\\& 0\le y\le1\end{cases}$
+<span style="color:red"> different answer $\begin{cases}&1\le y\le4\\& 0\le y\le1\end{cases}$ </span>
 
 ### 2018S3A
 [2017FA1][] 
@@ -2323,7 +2323,7 @@ $f_{Y_2}=2y_2$ dependent
 
 (c) Find $E[Y_1+Y_2]$ =1
 
-(d) Find $P(Y_1\le1/3|Y_1\le3/4)$ 495/576 55/64
+(d) Find $P(Y_1\le3/4|Y_1>1/3)$ 495/576 55/64
 
 ### 2018FA2
 [@CDF] [range]
