--- a/static/stat563/qe_math_stat.Rmd
+++ b/static/stat563/qe_math_stat.Rmd
@@ -1659,7 +1659,7 @@ Find the m.l.e. of $\theta$ and find its bias.
 Suppose $Y$ is a random variable (sample size = 1) from a population with density function
 $f(y|\theta)=\begin{cases}\theta y^{\theta-1}& 0<x<1,\theta>0\\0& o.w.\end{cases}$
 
-(a) Sketch the power function of the test of the rejection: $Y>0.5$.
+(a) Sketch the power function of the test of the rejection: $Y>0.05$.
 
 $\alpha=P_{\theta_1}(T<t_0)$
 
@@ -1883,7 +1883,7 @@ $\frac{(\theta+1)^2}{n}$
 
 Let $X$ and $Y$ have the following joint pdf:
 $f(x,y) =\begin{cases}6(y-x)& 0<x<y<1\\0& o.w.\end{cases}$
-Define $Z=(X+Y)=2$ and $W=Y$, respectively.
+Define $Z=(X+Y)/2$ and $W=Y$, respectively.
 
 
 (a) Find the joint pdf of Z and W.
