--- a/docs/stat563/qe_math_stat.Rmd
+++ b/docs/stat563/qe_math_stat.Rmd
@@ -1790,7 +1790,7 @@ $T=\sum x_i\sim Pois(n\lambda)$, $\bar X$
 
 (d) Find the MVUE of $e^{-\lambda}$.
 
- $ X_1=0$
+ $X_1=0$
 
 $E(T|y)=(\frac{n-1}{n})^y$
 
@@ -1800,13 +1800,13 @@ $E(T|y)=(\frac{n-1}{n})^y$
 
 7.3.23 p347
 
-$ X_1=1$
+$X_1=1$
 
 $E(T|y)= \sim Bino(y,1/n)$
 
 (f) Find the MVUE of $P(X_i=k)=\lambda^ke^{-\lambda}/k!$:
 
- $ X_1=k$
+ $X_1=k$
 
 $E(T|y)= \sim Bino(y,1/n)$
 
@@ -1827,7 +1827,7 @@ $\frac{y^2-y}{n^2-n}$
 
 $\frac{y^2-y}{n^2-n}-\frac{y}n$
 
-(d) What is the MVUE of $P(Y=k)=\binom{n}{k}p^k(1-p)^{n-k}$?
+(d) <span style="color:red"> What is the MVUE of $P(Y=k)=\binom{n}{k}p^k(1-p)^{n-k}$?</span>
 
 
 
