--- a/docs/stat563/qe_math_stat.Rmd
+++ b/docs/stat563/qe_math_stat.Rmd
@@ -1811,7 +1811,7 @@ $E(T|y)= \sim Bino(y,1/n)$
 $E(T|y)= \sim Bino(y,1/n)$
 
 ### 2016S2
-[2017FB1][] [@Bino] [@MVUE]
+[2017FB1][] [@Bino] [@MVUE] [Bino+MLE 7.2.9]
 
 Let $Y$ be $Binomial(n,p)$, with $n$ known and $p$ unknown. Among functions $u(Y)$ of $Y$,
 
